--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
 		"nodemon": "^3.1.4"
 	},
 	"dependencies": {
+		"@types/express": "^4.17.21",
 		"body-parser": "^1.20.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
