--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"build": "node index.js"
+		"start": "node index.js"
 	},
 	"author": "Kishan",
 	"license": "ISC",
